--- a/travelhelper/pubspec.yaml
+++ b/travelhelper/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.1.0
   google_fonts: ^6.1.0
   bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
